--- a/src/components/SubHeader/SubHeader.module.css
+++ b/src/components/SubHeader/SubHeader.module.css
@@ -28,3 +28,8 @@
     -webkit-text-stroke: 2px #fff;
     -webkit-text-fill-color: var(--main-background);
 }
+
+button {
+    padding: 0;
+    cursor: pointer;
+}
