--- a/src/components/ProjectsBlock/ProjectsBlock.module.css
+++ b/src/components/ProjectsBlock/ProjectsBlock.module.css
@@ -123,7 +123,7 @@
 
 .allProjectsBtn {
     position: absolute;
-    left: 0;
+    left: 100px;
     bottom: 0;
     transition: transform 0.2s ease-in;
 }
