--- a/src/components/SubHeader/SubHeader.module.css
+++ b/src/components/SubHeader/SubHeader.module.css
@@ -25,6 +25,13 @@
 }
 
 .subTitle {
+    font-family: Montserrat, sans-serif;
+    font-style: normal;
+    font-weight: 900;
+    font-size: 86px;
+    line-height: 100px;
+    letter-spacing: 0.15em;
+    text-transform: uppercase;
     -webkit-text-stroke: 2px #fff;
     -webkit-text-fill-color: var(--main-background);
 }
